# error-translator-cli-v2

./: .coverage  .gitignore  MANIFEST.in  README.md  index.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml
ARCHITECTURE/: index.html
dist_validate_deps/: error_translator_cli_v2-3.0.4.dev1-cp314-cp314-linux_x86_64.whl
docs/: ARCHITECTURE.md  examples.md  index.md
scripts/: scraper.py
search/: search_index.json
site/: index.html  sitemap.xml
site/examples/: index.html
site/search/: search_index.json
src/error_translator/: __init__.py  auto.py  banner.py  cli.py  core.py  jupyter.py  parser.py  rules.json  rules.py  runner.py  ui.py
src/error_translator/api/: server.py
src/error_translator/api/static/: index.html  style.css
tests/: test_core.py
