[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "error-translator-cli-v2"
version = "3.0.3"
description = "Offline Python traceback translator and error explainer CLI that converts exceptions into clear explanations and actionable fixes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Gourabananda Datta", email = "gourabanandadatta@zohomail.in" }
]
keywords = [
    "python",
    "python error translator",
    "traceback translator",
    "python traceback analyzer",
    "python exception explainer",
    "error explainer",
    "error handling",
    "debugging",
    "developer tools",
    "stack-trace",
    "cli",
    "terminal",
    "offline",
    "fastapi",
    "human-readable"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/gourabanandad/error-translator-cli-v2"
"Source" = "https://github.com/gourabanandad/error-translator-cli-v2"
"Documentation" = "https://gourabanandad.github.io/error-translator-cli-v2/"
"Issues" = "https://github.com/gourabanandad/error-translator-cli-v2/issues"
"Changelog" = "https://github.com/gourabanandad/error-translator-cli-v2/releases"
"Contributors" = "https://github.com/gourabanandad/error-translator-cli-v2/graphs/contributors"
"PyPI" = "https://pypi.org/project/error-translator-cli-v2/"

[project.scripts]
explain-error = "error_translator.cli:main"

[project.optional-dependencies]
server = ["fastapi>=0.110", "pydantic>=2.6", "uvicorn>=0.29"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.7", "pymdown-extensions>=10.0"]
dev = ["pytest>=8.0", "build>=1.2", "twine>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=error_translator --cov-report=term-missing"

[tool.setuptools.package-data]
error_translator = ["rules.json", "static/*.html", "static/*.css"]